# KLEIO-Python-SDK

./: .gitignore  Demo_VersionedData_Zarr.ipynb  README.md  benchmarking.md  conda_requirement.txt  create_data.py  publish.sh  read_data.py  requirements.txt  scripts.py  setup.cfg  setup.py
.github/workflows/: python-publish.yml
benchmarking/benchmarking/: FileSizeBenchmark.py  benchmark_best_chunk_best_commit.py  benchmark_full_file.py  benchmark_full_time_size.py  benchmark_gc_intense_branching_1m.py  benchmark_git_compression.py  benchmark_index_50_commit_step.py  benchmark_less_du_gc_intense_branching_1m.py  benchmark_random_unique_full.py  config.py  create_file.py  create_full_random_file.py  nrs_benchmark_fill.py  path_config.py  (+4 more)
examples/: clean_gc.py  create_data.py  intense_branching.py  intense_write.py  kleio.py  kleio_n5.py  read_data.py  show_all_commits.py  size_test.py  zarr_storage_test.py
examples_zarr/: clean_gc.py  create_data.py  intense_branching.py  intense_write.py  intense_writing_every_100_branching.py  read_data.py  test_level.py
kleio/: __init__.py  config.py  core.py  stores.py
plot_graphs/: 0404_plot_right_chunk_size.ipynb  Plot.ipynb  Plot3_full_files.ipynb  Scatter_best_commit_step_50.ipynb  old.py  utils.py
tests/: test_creation.py  test_vcs.py  test_write.py
versionedstoragelib/: Metadata.py  VersionedData.py
versionedzarrlib/: Benchmark.py  GitLib.py  Metadata.py  VersionedData.py  VersionedZarrData.py  __init__.py  config.py  data.py  exceptions.py  metadata.py  remote_data.py  ssh.py  util.py  vc.py  zarr_store.py
(+111 files in other folders)
