[metadata]
name = pykleio
version = 0.1.1
author = Marwan Zouinkhi
author_email = zouinkhi.marwan@gmail.com
description = Versioned Storage Python SDK - enable version management for nd data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JaneliaSciComp/KLEIO-Python-SDK
project_urls =
    Bug Tracker = https://github.com/JaneliaSciComp/KLEIO-Python-SDK/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
test_suite = tests
install_requires =
    numpy
    zarr
    fsspec
    tqdm
    dask
    paramiko
    scp
    requests
    deprecation
    numcodecs
    GitPython

[options.packages.find]
exclude =
    examples*
    versionedzarrlib*
    img*
